@@ -9,7 +9,7 @@ import static com.hedera.hapi.node.base.HederaFunctionality.UTIL_PRNG;
 import static com.hedera.hapi.util.HapiUtils.asTimestamp;
 import static com.hedera.node.app.spi.workflows.HandleContext.TransactionCategory.USER;
 import static com.hedera.node.app.spi.workflows.record.StreamBuilder.ReversingBehavior.REVERSIBLE;
-import static com.hedera.node.app.spi.workflows.record.StreamBuilder.TransactionCustomizer.NOOP_TRANSACTION_CUSTOMIZER;
+import static com.hedera.node.app.spi.workflows.record.StreamBuilder.SignedTxCustomizer.NOOP_SIGNED_TX_CUSTOMIZER;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -17,6 +17,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import com.hedera.hapi.block.stream.BlockItem;
 import com.hedera.hapi.block.stream.trace.ContractSlotUsage;
 import com.hedera.hapi.block.stream.trace.SlotRead;
+import com.hedera.hapi.block.stream.trace.WrittenSlotKeys;
 import com.hedera.hapi.node.base.AccountAmount;
 import com.hedera.hapi.node.base.AccountID;
 import com.hedera.hapi.node.base.ContractID;
@@ -26,16 +27,15 @@ import com.hedera.hapi.node.base.ScheduleID;
 import com.hedera.hapi.node.base.TokenAssociation;
 import com.hedera.hapi.node.base.TokenID;
 import com.hedera.hapi.node.base.TokenTransferList;
-import com.hedera.hapi.node.base.Transaction;
 import com.hedera.hapi.node.base.TransactionID;
 import com.hedera.hapi.node.base.TransferList;
 import com.hedera.hapi.node.contract.EvmTransactionResult;
 import com.hedera.hapi.node.token.CryptoTransferTransactionBody;
 import com.hedera.hapi.node.transaction.AssessedCustomFee;
 import com.hedera.hapi.node.transaction.ExchangeRateSet;
+import com.hedera.hapi.node.transaction.SignedTransaction;
 import com.hedera.hapi.node.transaction.TransactionBody;
 import com.hedera.hapi.node.transaction.TransactionRecord;
-import com.hedera.hapi.streams.ContractStateChanges;
 import com.hedera.node.app.blocks.impl.BlockStreamBuilder;
 import com.hedera.pbj.runtime.io.buffer.Bytes;
 import java.time.Instant;
@@ -54,13 +54,15 @@ public class BlockStreamBuilderTest {
     public static final long TRANSACTION_FEE = 6846513L;
     public static final int ENTROPY_NUMBER = 87372879;
     public static final String MEMO = "Yo Memo";
-    private Transaction transaction = Transaction.newBuilder()
-            .body(TransactionBody.newBuilder()
+    private final SignedTransaction signedTx = SignedTransaction.newBuilder()
+            .bodyBytes(TransactionBody.PROTOBUF.toBytes(TransactionBody.newBuilder()
                     .cryptoTransfer(CryptoTransferTransactionBody.newBuilder().build())
-                    .build())
+                    .memo("ABCDEFG")
+                    .transactionFee(123)
+                    .build()))
             .build();
+    private final Bytes signedTxBytes = SignedTransaction.PROTOBUF.toBytes(signedTx);
     private @Mock TransactionID transactionID;
-    private final Bytes transactionBytes = Bytes.wrap("Hello Tester");
     private @Mock TransferList transferList;
     private @Mock TokenTransferList tokenTransfer;
     private @Mock ScheduleID scheduleRef;
@@ -70,7 +72,6 @@ public class BlockStreamBuilderTest {
     private @Mock AccountAmount accountAmount;
     private @Mock ResponseCodeEnum status;
     private @Mock ExchangeRateSet exchangeRate;
-    private @Mock ContractStateChanges contractStateChanges;
     private @Mock AccountID accountID;
 
     @Test
@@ -79,7 +80,7 @@ public class BlockStreamBuilderTest {
                 .assessedCustomFees(List.of(assessedCustomFee))
                 .functionality(HederaFunctionality.CRYPTO_TRANSFER);
 
-        List<BlockItem> blockItems = itemsBuilder.build(false, false).blockItems();
+        List<BlockItem> blockItems = itemsBuilder.build(false, null).blockItems();
         validateTransactionBlockItems(blockItems);
         validateTransactionResult(blockItems);
 
@@ -96,7 +97,7 @@ public class BlockStreamBuilderTest {
         if (entropyOneOfType == TransactionRecord.EntropyOneOfType.PRNG_BYTES) {
             final var itemsBuilder =
                     createBaseBuilder().functionality(UTIL_PRNG).entropyBytes(prngBytes);
-            List<BlockItem> blockItems = itemsBuilder.build(false, false).blockItems();
+            List<BlockItem> blockItems = itemsBuilder.build(false, null).blockItems();
             validateTransactionBlockItems(blockItems);
             validateTransactionResult(blockItems);
 
@@ -108,7 +109,7 @@ public class BlockStreamBuilderTest {
         } else {
             final var itemsBuilder =
                     createBaseBuilder().functionality(UTIL_PRNG).entropyNumber(ENTROPY_NUMBER);
-            List<BlockItem> blockItems = itemsBuilder.build(false, false).blockItems();
+            List<BlockItem> blockItems = itemsBuilder.build(false, null).blockItems();
             validateTransactionBlockItems(blockItems);
             validateTransactionResult(blockItems);
 
@@ -122,15 +123,15 @@ public class BlockStreamBuilderTest {
 
     @Test
     void testBlockItemsWithTraceAndOutput() {
-        final var usages =
-                List.of(new ContractSlotUsage(ContractID.DEFAULT, List.of(Bytes.EMPTY), List.of(SlotRead.DEFAULT)));
+        final var usages = List.of(new ContractSlotUsage(
+                ContractID.DEFAULT, new WrittenSlotKeys(List.of(Bytes.EMPTY)), List.of(SlotRead.DEFAULT)));
         final var evmTxResult = EvmTransactionResult.DEFAULT;
         final var itemsBuilder = createBaseBuilder()
                 .functionality(CONTRACT_CALL)
                 .evmCallTransactionResult(evmTxResult)
                 .addContractSlotUsages(usages);
 
-        List<BlockItem> blockItems = itemsBuilder.build(false, false).blockItems();
+        List<BlockItem> blockItems = itemsBuilder.build(false, null).blockItems();
         validateTransactionBlockItems(blockItems);
         validateTransactionResult(blockItems);
 
@@ -157,7 +158,7 @@ public class BlockStreamBuilderTest {
         final var itemsBuilder = createEmptyBuilder().functionality(TOKEN_UPDATE);
         // set additional trace data
         itemsBuilder.addAutomaticTokenAssociation(association);
-        final var blockItems = itemsBuilder.build(false, true).blockItems();
+        final var blockItems = itemsBuilder.build(false, List.of()).blockItems();
 
         final var traceItem = blockItems.get(2);
         assertThat(traceItem.hasTraceData()).isTrue();
@@ -175,7 +176,7 @@ public class BlockStreamBuilderTest {
         final var itemsBuilder = createEmptyBuilder().functionality(CONSENSUS_SUBMIT_MESSAGE);
         // set additional trace data
         itemsBuilder.topicSequenceNumber(66);
-        final var blockItems = itemsBuilder.build(false, true).blockItems();
+        final var blockItems = itemsBuilder.build(false, List.of()).blockItems();
 
         final var traceItem = blockItems.get(2);
         assertThat(traceItem.hasTraceData()).isTrue();
@@ -192,7 +193,7 @@ public class BlockStreamBuilderTest {
         final var itemsBuilder =
                 createBaseBuilder().functionality(CRYPTO_CREATE).accountID(accountID);
 
-        List<BlockItem> blockItems = itemsBuilder.build(false, false).blockItems();
+        List<BlockItem> blockItems = itemsBuilder.build(false, null).blockItems();
         validateTransactionBlockItems(blockItems);
         validateTransactionResult(blockItems);
 
@@ -220,25 +221,22 @@ public class BlockStreamBuilderTest {
     }
 
     private void validateTransactionBlockItems(final List<BlockItem> blockItems) {
-        final var txnBlockItem = blockItems.get(0);
-        assertTrue(txnBlockItem.hasEventTransaction());
-        assertEquals(
-                Transaction.PROTOBUF.toBytes(transaction),
-                txnBlockItem.eventTransaction().applicationTransactionOrThrow());
+        final var txnBlockItem = blockItems.getFirst();
+        assertTrue(txnBlockItem.hasSignedTransaction());
+        assertEquals(SignedTransaction.PROTOBUF.toBytes(signedTx), txnBlockItem.signedTransactionOrThrow());
     }
 
     private BlockStreamBuilder createBaseBuilder() {
         final List<TokenTransferList> tokenTransferLists = List.of(tokenTransfer);
         final List<AccountAmount> paidStakingRewards = List.of(accountAmount);
-        return new BlockStreamBuilder(REVERSIBLE, NOOP_TRANSACTION_CUSTOMIZER, USER)
+        return new BlockStreamBuilder(REVERSIBLE, NOOP_SIGNED_TX_CUSTOMIZER, USER)
                 .status(status)
                 .consensusTimestamp(CONSENSUS_TIME)
                 .parentConsensus(PARENT_CONSENSUS_TIME)
                 .exchangeRate(exchangeRate)
                 .scheduleRef(scheduleRef)
                 .transactionFee(TRANSACTION_FEE)
-                .transaction(transaction)
-                .transactionBytes(transactionBytes)
+                .signedTx(signedTx)
                 .transactionID(transactionID)
                 .memo(MEMO)
                 .transactionFee(TRANSACTION_FEE)
@@ -250,8 +248,8 @@ public class BlockStreamBuilderTest {
     }
 
     private BlockStreamBuilder createEmptyBuilder() {
-        return new BlockStreamBuilder(REVERSIBLE, NOOP_TRANSACTION_CUSTOMIZER, USER)
-                .transaction(transaction)
-                .transactionBytes(transactionBytes);
+        return new BlockStreamBuilder(REVERSIBLE, NOOP_SIGNED_TX_CUSTOMIZER, USER)
+                .signedTx(signedTx)
+                .serializedSignedTx(signedTxBytes);
     }
 }
